cabal-version:      2.2
name:               nazuki
version:            0.2.0.0
description:
  Please see the README on GitHub at <https://github.com/n4o847/nazuki-hs>

homepage:           https://github.com/n4o847/nazuki-hs#readme
bug-reports:        https://github.com/n4o847/nazuki-hs/issues
author:             n4o847
maintainer:         22975590+n4o847@users.noreply.github.com
copyright:          2019 n4o847
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/n4o847/nazuki-hs

common deps
  build-depends:
    , base
    , bytestring
    , containers
    , megaparsec
    , mtl
    , parser-combinators
    , text

  other-modules:    Paths_nazuki
  default-language: GHC2021

library
  import:          deps

  -- cabal-fmt: expand src
  exposed-modules:
    Nazuki.Assembly.Complex
    Nazuki.Assembly.Instruction
    Nazuki.Assembly.Label
    Nazuki.Assembly.Parser
    Nazuki.Main
    Nazuki.Runtime.Parser
    Nazuki.Runtime.Runner
    Nazuki.Script.AST
    Nazuki.Script.CodeGen
    Nazuki.Script.Parser
    Nazuki.Util
    Nazuki.VM.Binary32.Common
    Nazuki.VM.Binary32.Decimal32.BID
    Nazuki.VM.Binary32.Decimal32.DPD
    Nazuki.VM.Binary32.Int32
    Nazuki.VM.Binary32.IO
    Nazuki.VM.Binary32.Memory
    Nazuki.VM.Core
    Nazuki.VM.Decimal10.Float10
    Nazuki.VM.Decimal10.Int10
    Nazuki.VM.Util
    Nazuki.VM.VirtualMachine
    Nazuki.VM.Word1.Byte

  hs-source-dirs:  src

executable nazuki
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  nazuki

executable nazuki-wasm
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: wasm

  if (arch(wasm32) && os(wasi))
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_init,--export=malloc,--export=free,--export=compile,--export=assemble,--export=run,--export=createBanner"

  build-depends:  nazuki

test-suite nazuki-test
  import:             deps
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs

  -- cabal-fmt: expand test -Spec
  other-modules:
    Nazuki.Assembly.ParserSpec
    Nazuki.Script.CodeGenSpec
    Nazuki.Script.ParserSpec
    Nazuki.UtilSpec
    Nazuki.VM.Binary32.Int32Spec
    Nazuki.VM.Binary32.IOSpec
    Nazuki.VM.Decimal10.Int10Spec
    Nazuki.VM.Word1.ByteSpec

  hs-source-dirs:     test
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    , hspec
    , nazuki

benchmark nazuki-bench
  import:         deps
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: bench
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , criterion
    , nazuki
